# ComplexLibrary

./: .gitignore  CMakeLists.txt  README.md  replit.nix
Complex/: README.md
Complex/lib/: complex.h  complex_abs.cpp  complex_abs.h  complex_addition.cpp  complex_arg.cpp  complex_arg.h  complex_conj.cpp  complex_cos.cpp  complex_division.cpp  complex_exp.cpp  complex_imag.cpp  complex_log.cpp  complex_log10.cpp  complex_norm.cpp  complex_plusequals.cpp  complex_polar.cpp  complex_pow.cpp  complex_sin.cpp  complex_sqrt.cpp  complex_tan.cpp
Complex/src/: main.cpp
Complex/tests/: complex_addition_test.cpp  complex_cos_test.cpp  complex_exp_test.cpp  complex_imag_test.cpp  complex_multiplication_test.cpp  complex_polar_test.cpp
komplexkanban/: Makefile  a.out  result
komplexkanban/lib/: complex.h  complex_abs.cpp  complex_arg.cpp  complex_cos.cpp  complex_log.cpp  complex_log10.cpp  complex_multiplication.cpp  complex_polar.cpp  complex_pow.cpp  complex_real.cpp  complex_sin.cpp  complex_sqrt.cpp  complex_subtraction.cpp  complex_tan.cpp
komplexkanban/src/: CMakeLists.txt  main.cpp  main_test.cpp
komplexkanban/tests/: complex_abs_test.cpp  complex_arg_test.cpp  complex_conj_test.cpp  complex_cos_test.cpp  complex_division_test.cpp  complex_log10_test.cpp  complex_log_test.cpp  complex_norm_test.cpp  complex_plusequals_test.cpp  complex_pow_test.cpp  complex_real_test.cpp  complex_sin_test.cpp  complex_sqrt_test.cpp  complex_subtraction_test.cpp  complex_tan_test.cpp
tests/suite/: complex_abs_test.cpp  complex_addition_test.cpp  complex_arg_test.cpp  complex_conj_test.cpp  complex_cos_test.cpp  complex_division_test.cpp  complex_exp_test.cpp  complex_imag_test.cpp  complex_log10_test.cpp  complex_log_test.cpp  complex_multiplication_test.cpp  complex_norm_test.cpp  complex_plusequals_test.cpp  complex_polar_test.cpp  complex_pow_test.cpp  complex_real_test.cpp  complex_sin_test.cpp  complex_sqrt_test.cpp  complex_subtraction_test.cpp  complex_tan_test.cpp
